--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest --coverage",
     "start": "node index.js"
   },
+  "jest":{
+    "testEnvironment": "jsdom"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DemetriCassidy/WhatsForDinner.git"
