--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/DemetriCassidy/WhatsForDinner#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.17.3",
     "jest": "^27.5.1",
     "mysql": "^2.18.1",
