--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "jest": "^27.5.1",
     "mysql": "^2.18.1",
     "pg": "^8.7.3",
